Make tests less platform-dependent